# tailor

./: .env.example  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/agents/gap_analyzer/: graph.py  runner.py  schemas.py
backend/agents/jd_analyzer/: graph.py  runner.py  schemas.py
backend/agents/message_generator/: graph.py  runner.py  schemas.py
backend/agents/question_generator/: graph.py  runner.py  schemas.py
backend/agents/resume_parser/: graph.py  runner.py  schemas.py
backend/agents/supervisor/: graph.py  runner.py
backend/apps/accounts/: urls.py  views.py
backend/apps/documents/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/documents/migrations/: 0001_initial.py
backend/apps/jobs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/jobs/migrations/: 0001_initial.py  0002_alter_agentresult_application.py  0003_agentresult_user.py  0004_alter_jobapplication_jd_url.py  0005_alter_jobapplication_status.py  0006_alter_jobapplication_status.py
backend/core/: celery.py  exceptions.py  settings.py  urls.py
backend/tasks/: celery.py
frontend/: .dockerignore  Dockerfile  README.md  Tailor API.yaml  package-lock.json  package.json  svelte.config.js
frontend/src/: hooks.client.ts
frontend/src/lib/: auth.ts
frontend/src/lib/components/: Toast.svelte
frontend/src/lib/stores/: polling.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/add/: +page.svelte
frontend/src/routes/home/: +page.svelte  (+1 more)
(+2 files in other folders)
