[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-stubs>=6.0.4",
    "django-types>=0.24.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]


[tool.tomlscript] 
# runserver 
dev = "uv run manage.py runserver" 
# manage.py 
manage = "uv run manage.py" 
# makemigrations and migrate 
migrate = "uv run manage.py makemigrations && uv run manage.py migrate" 
# startapp 
add = "uv run manage.py startapp"
